修改到第四章，增加了CGLib测试